# price-crawler

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  data_storage.py  exchange_rate.py  gold_price.py  gold_price_new.py  main.py  pyproject.toml  scheduler.py  uv.toml  uv_usage.md
.trae/rules/: project_rules.md
config/: crawler_config.json  feishu_post.json  price.json
docs/: cngold_data.md  code_quality_guide.md  uv_usage.md
email/: gmail_template.html
exchange_rate/: __init__.py  exchange_rate_api.py
gold/: __init__.py  cngold_crawler.py  cngold_playwright_crawler.py  gold_crawler.py  goldprice_crawler.py  goldpricez_playwright_crawler.py  juhe_api.py
stock/: __init__.py  stock_indices.py
storage/: __init__.py  base.py  csv_storage.py  sqlite_storage.py
storage/sql/: create_tables.sql
utils/: __init__.py  logger.py  scheduler.py
