[project]
name = "price-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# 兼容 Mac 里python的3.12版本
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "chinesecalendar>=1.8.0",
    "numpy>=1.20.0",
    "pytz>=2021.1",
]
